--- a/resource/common/sass/_module.scss
+++ b/resource/common/sass/_module.scss
@@ -50,6 +50,7 @@ section {
 /*---------- header -----------*/
 
 .header {
+ box-shadow: 0 5px 7px rgba(0, 0, 0, 0.4);
  padding: 10px 0;
  position: fixed;
  width: 100%;
@@ -226,10 +227,6 @@ section {
 
 
 /*---------- sponsors -----------*/
-
-.sponsors {
- background-color: $bgcolor-gray;
-}
 
 
 /*---------- nav -----------*/
