--- a/resource/common/sass/_module.scss
+++ b/resource/common/sass/_module.scss
@@ -1,199 +1,199 @@
 /*---------- section ----------*/
 
 section {
- margin: 0 auto;
- width: 100%;
- max-width: 1080px;
- padding: 15px;
- line-height: 1.6;
- div {
-  padding: 0 0 0 5px;
- }
+	margin: 0 auto;
+	width: 100%;
+	max-width: 1080px;
+	padding: 15px;
+	line-height: 1.6;
+	div {
+		padding: 0 0 0 5px;
+	}
 }
 
 .sectionTitle {
- text-align: center;
- overflow: hidden;
- margin-bottom: 40px;
- span {
-  display: inline-block;
-  position: relative;
-  font-size: 0.6em;
-  font-weight: 400;
-  text-align: center;
-  margin: 0 auto;
- }
- span:before {
-  right: 100%;
-  margin-right: 15px;
- }
- span:after {
-  left: 100%;
-  margin-left: 15px;
- }
- span:before,
- span:after {
-  content: "";
-  position: absolute;
-  top: 0;
-  height: 23px;
-  border-bottom: 1px solid #27282e;
-  width: 600px;
- }
+	text-align: center;
+	overflow: hidden;
+	margin-bottom: 40px;
+	span {
+		display: inline-block;
+		position: relative;
+		font-size: 0.6em;
+		font-weight: 400;
+		text-align: center;
+		margin: 0 auto;
+	}
+	span:before {
+		right: 100%;
+		margin-right: 15px;
+	}
+	span:after {
+		left: 100%;
+		margin-left: 15px;
+	}
+	span:before,
+	span:after {
+		content: "";
+		position: absolute;
+		top: 0;
+		height: 23px;
+		border-bottom: 1px solid #27282e;
+		width: 600px;
+	}
 }
 
 .section_content {
- padding: 15px;
+	padding: 15px;
 }
 
 
 /*---------- header -----------*/
 
 .header {
- box-shadow: 0 5px 7px rgba(0, 0, 0, 0.4);
- padding: 10px 0;
- position: fixed;
- width: 100%;
- z-index: 2000;
- &_siteTitle {
-  color: #FFF;
-  font-size: 1.4em;
-  font-weight: 500;
-  margin: 0;
-  padding: 20px 0;
-  text-align: center;
- }
- &.smaller {
-  height: 40px;
-  opacity: 0.8;
-  .header_siteTitle {
-   padding: 10px 0;
-  }
- }
+	box-shadow: 0 5px 7px rgba(0, 0, 0, 0.4);
+	padding: 10px 0;
+	position: fixed;
+	width: 100%;
+	z-index: 2000;
+	&_siteTitle {
+		color: #FFF;
+		font-size: 1.4em;
+		font-weight: 500;
+		margin: 0;
+		padding: 20px 0;
+		text-align: center;
+	}
+	&.smaller {
+		height: 40px;
+		opacity: 0.8;
+		.header_siteTitle {
+			padding: 10px 0;
+		}
+	}
 }
 
 
 /*---------- mainImg -----------*/
 
 .mainImg {
- position: relative;
- top: 60px;
- &_img {
-  height: auto;
-  width: 100%;
-  max-width: 100%;
- }
+	position: relative;
+	top: 60px;
+	&_img {
+		height: auto;
+		width: 100%;
+		max-width: 100%;
+	}
 }
 
 
 /*---------- home -----------*/
 
 .row {
- margin: 0 auto;
+	margin: 0 auto;
 }
 
 .home {
- margin: 60px auto 0 auto;
- position: relative;
- &_date {
-  margin: 20px auto;
- }
- &_eventInfo {
-  display: flex;
-  justify-content: center;
-  ul {
-   margin-right: 40px;
-  }
- }
- &_eventDay {
-  font-size: 1.6em;
-  font-weight: 900;
-  list-style: none;
- }
- &_eventTime {
-  list-style: none;
-  &_caution {
-   font-size: .9em;
-   margin: 10px auto;
-   text-align: center;
-  }
- }
- &_access_place {
-  margin-top: 20px;
- }
- &_access_traffic {
-  margin: 20px 0 0 20px;
- }
+	margin: 60px auto 0 auto;
+	position: relative;
+	&_date {
+		margin: 20px auto;
+	}
+	&_eventInfo {
+		display: flex;
+		justify-content: center;
+		ul {
+			margin-right: 40px;
+		}
+	}
+	&_eventDay {
+		font-size: 1.6em;
+		font-weight: 900;
+		list-style: none;
+	}
+	&_eventTime {
+		list-style: none;
+		&_caution {
+			font-size: .9em;
+			margin: 10px auto;
+			text-align: center;
+		}
+	}
+	&_access_place {
+		margin-top: 20px;
+	}
+	&_access_traffic {
+		margin: 20px 0 0 20px;
+	}
 }
 
 .event_day {
- padding-left: 30px;
- font-size: .9em;
+	padding-left: 30px;
+	font-size: .9em;
 }
 
 
 /*---------- event -----------*/
 
 .mapcheckbox {
- font-weight: 800;
+	font-weight: 800;
 }
 
 .tab-content td>div,
 .tab-content td a>div {
- font-size: 0.8em;
+	font-size: 0.8em;
 }
 
 .nav>li>a {
- padding: 10px 6px;
+	padding: 10px 6px;
 }
 
 .nav-tabs li.tab1>a,
 .nav-tabs li.tab2>a,
 .nav-tabs li.tab3>a {
- color: #FFF;
- font-weight: 800;
+	color: #FFF;
+	font-weight: 800;
 }
 
 .table-small {
- display: none;
- width: 100%;
- th {
-  text-align: right;
-  width: 40%;
- }
- .eventTime {
-  text-align: left;
-  color: #FFF;
- }
+	display: none;
+	width: 100%;
+	th {
+		text-align: right;
+		width: 40%;
+	}
+	.eventTime {
+		text-align: left;
+		color: #FFF;
+	}
 }
 
 .event {
- &_schedule div {
-  padding-left: 0px;
- }
- &_schedule td {
-  padding: 0px 10px;
- }
- &_schedule th {
-  padding: 6px 10px;
- }
- &_schedule th>a {
-  font-weight: 800;
- }
- &_member {
-  font-size: .8em;
- }
- &Time {
-  font-weight: 800;
- }
+	&_schedule div {
+		padding-left: 0px;
+	}
+	&_schedule td {
+		padding: 0px 10px;
+	}
+	&_schedule th {
+		padding: 6px 10px;
+	}
+	&_schedule th>a {
+		font-weight: 800;
+	}
+	&_member {
+		font-size: .8em;
+	}
+	&Time {
+		font-weight: 800;
+	}
 }
 
 .panel_heading {
- cursor: pointer;
+	cursor: pointer;
 }
 
 .borderTop {
- border-top: 2px solid #CCC;
+	border-top: 2px solid #CCC;
 }
 
 
@@ -222,7 +222,7 @@ section {
 /*---------- map -----------*/
 
 #map {
- width: 100%;
+	width: 100%;
 }
 
 
@@ -232,67 +232,104 @@ section {
 /*---------- nav -----------*/
 
 .menu-btn {
- background: url(btn-menu.gif) no-repeat left top;
- -webkit-background-size: 100%;
- background-size: 100%;
- display: block;
- height: 45px;
- left: 0;
- position: absolute;
- top: 0;
- width: 45px;
+	background: url(btn-menu.gif) no-repeat left top;
+	-webkit-background-size: 100%;
+	background-size: 100%;
+	display: block;
+	height: 45px;
+	left: 0;
+	position: absolute;
+	top: 0;
+	width: 45px;
 }
 
 .tooltip-btn {
- background: url(btn-tooltip.gif) no-repeat left top;
- -webkit-background-size: 100%;
- background-size: 100%;
- display: block;
- height: 45px;
- position: absolute;
- right: 0;
- top: 0;
- width: 45px;
+	background: url(btn-tooltip.gif) no-repeat left top;
+	-webkit-background-size: 100%;
+	background-size: 100%;
+	display: block;
+	height: 45px;
+	position: absolute;
+	right: 0;
+	top: 0;
+	width: 45px;
 }
 
 #tooltip h2 {
- font-size: 18px;
- font-weight: bold;
- margin: 0.5em 0;
+	font-size: 18px;
+	font-weight: bold;
+	margin: 0.5em 0;
 }
 
 
 /*---------- toTop -----------*/
 
 .toTop {
- margin: 20px auto;
- text-align: center;
+	margin: 20px auto;
+	text-align: center;
 }
 
 
 /*---------- footer -----------*/
 
 footer {
- text-align: center;
- color: #FFF;
- font-weight: 500;
+	text-align: center;
+	color: #FFF;
+	font-weight: 500;
 }
 
 
 /*---------- fixInfo ----------*/
 
 .fixInfo {
- box-shadow: 0 -2px 7px rgba(0, 0, 0, 0.4);
- border-top-left-radius: 10px;
- border-top-right-radius: 10px;
- color: #FFF;
- margin: 0 auto;
- overflow: auto;
- position: fixed;
- padding: 12px 20px;
- width: 100%;
- text-align: center;
- z-index: 9999;
+	box-shadow: 0 -2px 7px rgba(0, 0, 0, 0.4);
+	border-top-left-radius: 10px;
+	border-top-right-radius: 10px;
+	color: #FFF;
+	margin: 0 auto;
+	overflow: auto;
+	position: fixed;
+	padding: 12px 20px;
+	width: 100%;
+	text-align: center;
+	z-index: 9999;
+}
+
+.panel-btn {
+	display: inline-block;
+	position: relative;
+	width: 40px;
+	height: 40px;
+	margin: -50px 0 0px 90%;
+	border-radius: 50%;
+	background: #fff;
+	z-index: 8888;
+	&:hover {
+		cursor: pointer;
+	}
+	&-icon {
+		display: block;
+		position: absolute;
+		top: 50%;
+		left: 25%;
+		width: 20px;
+		height: 3px;
+		margin-top: 0px;
+		background: #2196F3;
+		transform: rotate(-135deg);
+		&:before {
+			display: block;
+			margin: -2px 0px 0 1px;
+			content: "";
+			position: absolute;
+			top: 50%;
+			left: 0;
+			width: 20px;
+			height: 3px;
+			background: #2196F3;
+			transform: rotate(-90deg);
+		}
+	}
 }
 
 
@@ -323,7 +360,7 @@ footer {
  height: 40px;
  margin: 0px 0 0px 90%;
  border-radius: 50%;
- background: #fff;
+ background: #fff;assssssss
  &:hover {
   cursor: pointer;
  }
