--- a/resource/base/common/sass/_theme.scss
+++ b/resource/base/common/sass/_theme.scss
@@ -1,6 +1,6 @@
-$colors:( is_red: #BE1E3C, is_pink: #EE9CA1, is_pink2: #EE9CA1, is_black: #000, is_yellow: #FFB60A);
-$subColors:( is_red: #333333, is_pink: #4AA161, is_pink2: #FFBFC2, is_black: #91200E, is_yellow: #464C5C);
-$bgColors:( is_red: #EEEEEE, is_pink: #F4F4F4, is_pink2: #F4F4F4, is_black: #EFEFEF, is_yellow: #EFEFEF);
+$colors:( is_red: #BE1E3C, is_pinkGreen: #EE9CA1, is_pinkPink: #EE9CA1, is_black: #000, is_yellow: #FFB60A);
+$subColors:( is_red: #333333, is_pinkGreen: #4AA161, is_pinkPink: #FFBFC2, is_black: #91200E, is_yellow: #464C5C);
+$bgColors:( is_red: #EEEEEE, is_pinkGreen: #F4F4F4, is_pinkPink: #F4F4F4, is_black: #EFEFEF, is_yellow: #EFEFEF);
 @each $key,
 $color in $colors {
 	.#{$key} {
@@ -10,11 +10,6 @@ $color in $colors {
 		.header_siteTitle {
 			background-color: $color;
 		}
-		/*
-  #modal {
-   background-color: $color;
-  }
-  */
 		li.tab2>a {
 			background-color: $color;
 			opacity: 0.6;
