--- a/resource/base/common/sass/_module.scss
+++ b/resource/base/common/sass/_module.scss
@@ -73,6 +73,19 @@ section {
 }
 
 
+/*---------- twitter button -----------*/
+
+.twitter-button {
+	position: fixed;
+	z-index: 1200;
+	padding: 4px 14px;
+	background-color: rgba(71, 31, 82, 0.8);
+	box-shadow: 0 2px 7px rgba(0, 0, 0, 0.4);
+	border-top-right-radius: 5px;
+	border-bottom-right-radius: 5px;
+}
+
+
 /*---------- mainImg -----------*/
 
 .mainImg {
